# roboflow_tg_bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: deploy.yaml  ruff.yaml  test.yaml
alembic/: env.py
alembic/versions/: 04d11ab162bf_fix_relationship.py  1f7fa1d25b8d_init.py  1fa0fe7f5983_init.py  3d0d4d1c1b3f_fix_relationship.py  4d4c4e87a698_fk_relations.py  684a3016c47d_init.py  991027652a1e_init.py
bot/: app.py  config.py  ui_commands.py
bot/db/models/: __init__.py  base.py  images.py  neural_models.py  recognition.py  recognized_objects.py  responses.py  uploaded_images.py
bot/db/repository/: neural_model.py  responses.py  uploaded_images.py
bot/dto/: __init__.py  response.py
bot/filters/: recognition.py
bot/handlers/: __init__.py  common.py  recognition.py  responses.py
bot/infrastructure/db/: uow.py
bot/infrastructure/db/models/: base.py  neural_models.py  recognized_objects.py  responses.py  uploaded_images.py
bot/infrastructure/db/repository/: __init__.py  base.py  neural_model.py  responses.py  uploaded_images.py
bot/keyboards/: __init__.py  common.py  recognition.py  responses.py
bot/middlewares/: db.py
bot/states/: __init__.py  recognition.py  responses.py
bot/utils/: __init__.py  object_recognition.py  on_startup.py  paginator.py  roboflow_api.py  text_templates.py
bot/utils/roboflow_service/: __init__.py  roboflow_api.py
tests/: conftest.py
tests/unit/: test_paginator.py  test_text_templates.py
