[tool.poetry]
name = "roboflowtgbot"
version = "0.1.0"
description = ""
authors = ["Vaipik <n.khylko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.0.0b7"
python-dotenv = "^1.0.0"
pydantic = {extras = ["dotenv"], version = "^1.10.9"}
pillow = "^9.5.0"
roboflow = "^1.1.0"
sqlalchemy = "^2.0.17"
alembic = "^1.11.1"
psycopg2 = "^2.9.6"
asyncpg = "^0.27.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
ruff = "^0.0.277"
black = "^23.3.0"
pre-commit = "^3.3.3"
aiogram-tests = "^1.0.3"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"

[tool.mypy]
python = "3.10"
ignore_missing_import = true
disable_error_code = ["call-arg", "union-attr", "arg-type", "index"]

[tool.ruff]
select = [
    "E",
    "F",
    "D"
]
exclude = ["config.py", "alembic", "tests", "readme", "README.md"]
ignore = ["D100", "D104", "D105", "D107", "F821"]

[tool.ruff.pydocstyle]
convention = "pep257"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
